--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,16 @@ body {
 header {
    /*Set text alignment to center */
   text-align: center;
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  
 }
 
 main {
   /* Set maximum width to be 800 pixels */
-  max-width: 1250px;
+  max-width: 1500px;
   /* Set margin to be automatically calculated on all sides */
   margin: auto;
   /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right *//*Padding is "body fat", whereas margins is "personal space" */
-  padding: 0px 20px; /*top AND bottom 0px, left AND right 20px */
+  padding: 0px 0px; /*top AND bottom 0px, left AND right 20px */
 }
 
 a
@@ -41,7 +41,8 @@ a:hover
 }
 
 .container {
-    position: relative;
+    position: fixed;
+      z-index: -1;
 }
 
 .iam {
@@ -54,20 +55,22 @@ a:hover
     color: black;
     font-size: 150%;
     font-style: oblique;
-    text-shadow: 0 0 0.2em #87F, 0 0 0.2em #87F,0 0 0.2em #87F,0 0 0.2em #87F;
+   /*#87F;*/
+    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white,0 0 0.2em white;
 
 }
 .title
 {
-
-   position: absolute;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    position: absolute;
     left: 0;
     top: 25%;
     width: 100%;
     text-align: center;
     font-size: 400%;
     color: black;
-    text-shadow: 0 0 0.2em #87F, 0 0 0.2em #87F,0 0 0.2em #87F,0 0 0.2em #87F, 0 0 0.2em #87F,0 0 0.2em #87F;
+    /*#87F;*/
+    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white,0 0 0.2em white;
 }
 
 .button1 {
@@ -116,10 +119,11 @@ a:hover
   opacity: 1 ;
 }
 .back {
-
+  /*position: absolute;*/
   max-width: 100%;
   height: auto;
-  opacity: 0.7 ;
+  opacity: 1;
+
 }
 
 .col
@@ -127,7 +131,7 @@ a:hover
     -webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
     column-count: 3;
-    column-gap: 20px;
+    column-gap: 30px;
 }
 
 .header {
@@ -143,8 +147,18 @@ a:hover
     padding: 5px 0px 5px 40px;
     text-indent: 40px;
     white-space: pre-wrap;
-
+    z-index: 1;
 }
+
+#pad
+{
+  padding-top: 50%;
+}
+
+#box{background-color: white;
+padding-bottom: 1%;
+padding-left: 8%;
+padding-right: 8%; }
 
 .intro
 {
@@ -154,7 +168,8 @@ a:hover
   /*font-weight: bold;*/
   font-size: 120%;
   color: #4109ba;
-  padding-bottom: 1%;
+  padding-bottom: 2%;
+  padding-top: 3%;
 }
 
 .about
@@ -180,7 +195,7 @@ footer {
   /* Set text alignment to center */
   text-align: center;
   /* Set margin on top to be 60 pixels */
-  margin-top: 30px;
+  margin-top: 0px;
 }
 
 /* Change features as page size decreases*/
@@ -251,6 +266,14 @@ footer {
     font-size: 90%;
     background-color: blue;
   }
+  .button1 {
+    left: 34%;
+    top: 63%;
+}
+.button2 {
+    left: 54%;
+    top: 63%;
+}
 
 }
 @media (max-width: 750px) {
@@ -259,9 +282,7 @@ footer {
     font-size: 87%;
     background-color: pink;
   }
-  .button1 {
-    left: 36%;
-}
+  
 
 }
 @media (max-width: 700px) {
@@ -271,7 +292,11 @@ footer {
     background-color: purple;
   }
   .button1 {
-    left: 34%;
+    left: 33%;
+    top: 57%;
+}
+.button2 {
+  top: 57%;
 }
 .headtext
 {
@@ -301,14 +326,20 @@ footer {
     column-count: 1;
     
   }
+
+  .iam{top: 23%;}
   
 .title
 {
+    top: 20%;
     font-size: 320%;
 }
 .button1 {
-    left: 30%;
+    top: 45%;
+    left: 31%;
 }
+.button2 {
+    top: 45%; }
 
 .headtext
 {
@@ -331,13 +362,18 @@ footer {
     
   }
   
+.iam{top: 20%;}  
 .title
 {
+    top: 17%;
     font-size: 320%;
 }
 .button1 {
+    top: 42%;
     left: 30%;
 }
+.button2 {
+    top: 42%; }
 
 .header {
 padding: 5px 20px 5px 40px;
@@ -363,17 +399,20 @@ padding: 5px 20px 5px 40px;
     column-count: 1;
     
   }
-  
+
+.iam{top: 15%;} 
 .title
 {
+    top: 12%;
     font-size: 320%;
 }
 .button1 {
-    left: 26%;
-    top: 74%;
+    top: 37%;
+    left: 28%;
+    
 }
 .button2 {
-  top: 74%;
+    top: 37%;
 }
 
 .header {
@@ -402,12 +441,19 @@ padding: 5px 40px 5px 40px;
     column-count: 1;
     
   }
-  .title
+
+.iam{top: 10%;} 
+.title
 {
+    top: 10%;
     font-size: 260%;
 }
 .button1 {
-    left: 24%;
+    top: 30%;
+    left: 22%;
+}
+.button2 {
+    top: 30%;
 }
 
 .header {
