--- a/css/style2.css
+++ b/css/style2.css
@@ -1,33 +1,35 @@
 h2
 {
-	padding-top: 7%;
-	font-family: Verdana, Geneva, sans-serif;
-	color: #12027c;
-	font-weight: normal;
-	font-size: 120%;
+  padding-top: 4%;
+  font-family: Verdana, Geneva, sans-serif;
+  color: #12027c;
+  font-weight: normal;
+  font-size: 120%;
 }
 
 .portpics
 {
-	max-width: 30%;
-	height: auto;
-	opacity: 1;
-	border: solid;
+  max-width: 30%;
+  height: auto;
+  opacity: 1;
+  border: solid;
+  border-radius: 40px;
 }
 
 img.portpics:hover
 {
-	opacity: 0.4;
+  opacity: 0.4;
+  
 }
 
 .portpad{padding-right: 3%;}
 
-
-
 .cont {
   position: relative;
   max-width: 30%;
-	height: auto;
+  height: auto;
+  z-index: 1;
+
 }
 
 .cent {
@@ -35,14 +37,14 @@ img.portpics:hover
   font-weight: bold;
   color: #12027c;
   position: absolute;
-  top: 200;
+  top: 0.2;
   bottom: 0;
   left: 0;
   right: 0;
   background: none;
-  padding-bottom: 70px;
-  padding-left: 55px;
-  z-index: 0;
+  padding-bottom: 6%;
+  /*padding-left: 55px;*/
+  z-index: -1;
 
   visibility: hidden;
   opacity: 0;
@@ -55,69 +57,7 @@ img.portpics:hover
   opacity: 1;
 }
 
-/*.hide
-{
-	color: black;
-	display: inline;
-	padding-top: 10%;
-	opacity: 0;
-}
+#wind{padding-left: 5%;}
+#solid{padding-left: 7%;}
+#cpp{padding-left: 8%;}
 
-img.portpics:hover .center
-{
-	opacity: 1;
-	z-index: 3;
-}
-
-.cont {
-    position: relative;
-}
-
-.cent {
-    position: absolute;
-    left: 0;
-    padding-top: 5%;
-    top: -5;
-    width: 100%;
-    text-align: center;
-    display: none;
- }*/
-
-/*ul.img-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: justify;
-}
-
-ul.img-list li {
-  display: inline;
-  height: 150px;
-  position: relative;
-  width: 500px;
-}
-
-span.text-content {
-  background: none;
-  color: black;
-  cursor: pointer;
-  display: table;
-  height: 50px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 150px;
-  opacity: 0;
-  z-index: 6;
-}
-
-span.text-content span {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-ul.img-list li:hover span.text-content {
-  opacity: 1;
-}
-*/
