--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,290 @@
+
+@media screen and (min-width: 1190px) {
+
+  body {
+    color: gray;
+  }
+  .button1 {
+    left: 38%;
+    top: 67%;
+  }
+  .button2 {
+      left: 54%;
+      top: 67%;
+  }
+  .headtext
+  {
+    padding-right: 45%;
+  }
+  #wind {padding-left: 2%;}
+  
+}
+
+@media (min-width: 1025px) {
+
+  body {
+    color: turquoise;
+  }
+  .button1 {
+    left: 38%;
+    top: 67%;
+  }
+  .button2 {
+      left: 54%;
+      top: 67%;
+  }
+
+  .headtext
+  {
+    padding-right: 36%;
+  }
+  #wind {font-size: 90%;}
+  #solid{padding-left: 6%;}
+  #cpp{padding-left: 6%;}
+
+}
+
+@media (min-width: 900px) {
+
+  body {
+    font-size: 95%;
+    color: yellow;
+  }
+  .headtext
+  {
+    padding-right: 40%;
+  }
+  #wind {padding-left: 3%;}
+
+}
+@media (min-width: 850px) {
+
+  body {
+    font-size: 92%;
+    color: green;
+  }
+
+}
+@media (min-width: 800px) {
+
+  body {
+    font-size: 90%;
+    color: blue;
+  }
+  .button1 {
+    left: 34%;
+    top: 63%;
+  }
+  .button2 {
+      left: 54%;
+      top: 63%;
+  }
+  .portpad{padding-right: 2%;}
+
+}
+@media (min-width: 750px) {
+
+  body {
+    font-size: 87%;
+    color: pink;
+  }
+  
+
+}
+@media (min-width: 700px) {
+
+  body {
+    font-size: 85%;
+    color: purple;
+  }
+  .button1 {
+    left: 33%;
+    top: 57%;
+  }
+  .button2 {
+    top: 57%;
+  }
+  .headtext
+  {
+    padding-right: 36%;
+  }
+  #wind {padding-left: 2%;}
+
+}
+@media (min-width: 650px) {
+
+  body {
+    font-size: 82%;
+    color: red;
+  }
+
+}
+
+@media (min-width: 600px) {
+
+  body {
+    font-size: 80%;
+    color: orange;
+  }
+  .col
+  {
+    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+    
+  }
+   .about
+  {
+    padding-top: 0%;
+  }
+  .about2
+  {
+    padding-top: 0%;
+  }
+  .space{ padding-bottom: 0%; }
+
+  .iam{top: 23%;}
+  
+  .title
+  {
+      top: 20%;
+      font-size: 320%;
+  }
+  .button1 {
+      top: 45%;
+      left: 31%;
+  }
+  .button2 {
+      top: 45%; }
+
+  .headtext
+  {
+    padding-right: 30%;
+  }
+
+  .portpics {min-width: 100%;}
+  .cent
+  {
+
+    padding-bottom: 20%;
+  }
+  #wind{font-size: 150%; padding-left: 20%;}
+  #solid{font-size: 150%; padding-left: 30%;}
+  #cpp{font-size: 150%; padding-left: 30%;}
+
+}
+
+@media (min-width: 550px) {
+
+  body {
+    font-size: 80%;
+    color: pink;
+  }
+  
+  .iam{top: 20%;}  
+  .title
+  {
+    top: 17%;
+    font-size: 320%;
+  }
+  .button1 {
+    top: 42%;
+    left: 30%;
+  }
+  .button2 {
+    top: 42%; }
+
+  .header {
+    padding: 5px 20px 5px 40px;
+  }
+
+  .headtext
+  {
+    padding-right: 25%;
+  }
+
+}
+
+@media (min-width: 495px) {
+
+  body {
+    font-size: 80%;
+    color: maroon;
+  }
+
+  .iam{top: 15%;} 
+  .title
+  {
+      top: 12%;
+      font-size: 320%;
+  }
+  .button1 {
+      top: 37%;
+      left: 28%;
+      
+  }
+  .button2 {
+      top: 37%;
+  }
+
+  .header {
+  padding: 5px 40px 5px 40px;
+  }
+
+  .headtext
+  {
+    padding-right: 7%;
+  }
+
+}
+
+
+@media (min-width: 412px) {
+
+  body {
+    font-size: 80%;
+    color: cyan;
+  }
+
+  .iam{top: 8%; font-size: 300%;} 
+  .title
+  {
+      top: 8%;
+      font-size: 600%;
+  }
+  .button1 {
+      top: 20%;
+      left: 31%;
+      font-size: 200%;
+  }
+  .button2 {
+      top: 20%;
+      font-size: 200%;
+  }
+
+  .header {
+  font-size: 200%;
+  padding: 5px 40px 5px 40px;
+  }
+
+  .headtext
+  {
+
+    padding-right: 30%;
+  }
+  .cent{padding-bottom: 19%;}
+  #wind{font-size: 300%; padding-left: 26%;}
+  #solid{padding-left: 32%; font-size: 300%;}
+  #cpp{padding-left: 32%; font-size: 300%;}
+  #titleP{top:1%;}
+
+}
+
+
+
+
 /* Change features as page size decreases*/
-@media screen and (max-width: 1190px) {
+/*@media screen and (max-width: 1190px) {
 
   body {
     color: gray;
@@ -128,8 +413,8 @@
   }
   .col
   {
-    -webkit-column-count: 1; /* Chrome, Safari, Opera */
-    -moz-column-count: 1; /* Firefox */
+    -webkit-column-count: 1;
+    -moz-column-count: 1; 
     column-count: 1;
     
   }
