--- a/css/style2.css
+++ b/css/style2.css
@@ -28,7 +28,7 @@ img.portpics:hover
   position: relative;
   max-width: 30%;
   height: auto;
-  z-index: 1;
+  z-index: 2;
 
 }
 
@@ -57,7 +57,8 @@ img.portpics:hover
   opacity: 1;
 }
 
-#wind{padding-left: 5%;}
+#wind{padding-left: 5%; }
 #solid{padding-left: 7%;}
 #cpp{padding-left: 8%;}
-
+#game{padding-left: 10%;}
+#battleship{padding-left: 9%;}
