3D modelling page partially complete
- 3D page mostly done
- media q doesnt work for this page???
- javascript used for this page, figure out how that works
- c++ page finished

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ footer {
 
 /*For portfolio and experience pages*/
 
-#titleP
+.titleP
 {
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
     position: absolute;
@@ -236,9 +236,9 @@ footer {
     top: 5%;
 }
 
-#padP {padding-top: 12%;}
+.padP {padding-top: 12%;}
 
-#boxP
+.boxP
 {
     background-color: white;
     padding-bottom: 1%;
