--- a/css/style2.css
+++ b/css/style2.css
@@ -72,12 +72,12 @@ img.portpics:hover
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 6; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 50px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
@@ -85,9 +85,11 @@ img.portpics:hover
 .modal-content {
     margin: auto;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    height: auto;
+    width: 90%;
+    /*max-width: 700px;*/
 }
+
 
 /* Add Animation */
 .modal-content, #caption1, #caption2, #caption3, #caption4, #caption5, #caption6
@@ -127,7 +129,7 @@ img.portpics:hover
 
 
 
-#portpic1, #portpic2, #portpic3, #portpic4, #portpic5, #portpic6
+#portpic1, #portpic2, #portpic3, #portpic4, #portpic5, #portpic6, #portpic7, #portpic8, #portpic9
 {
   max-width: 30%;
   height: auto;
@@ -136,80 +138,21 @@ img.portpics:hover
   border-radius: 40px;
 }
 
-#portpic1:hover, #portpic2:hover, #portpic3:hover, #portpic4:hover, #portpic5:hover, #portpic6:hover
+#portpic1:hover, #portpic2:hover, #portpic3:hover, #portpic4:hover, #portpic5:hover, #portpic6:hover, #portpic7:hover, #portpic8:hover, #portpic9:hover
 {
   opacity: 0.4;
   cursor: pointer;
 }
 
-#caption1, #caption2, #caption3, #caption4, #caption5, #caption6
+#caption1, #caption2, #caption3, #caption4, #caption5, #caption6, #caption7, #caption8, #caption9
 {
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;
+    max-width: 800px;
     text-align: center;
-    color: green;
+    color: white;
     padding: 10px 0;
     height: 300px;
+    font-family: Cambria, Georgia, serif;
 }
-
-/*#portpic2
-{
-  max-width: 30%;
-  height: auto;
-  opacity: 1;
-  border: solid;
-  border-radius: 40px;
-}
-
-#portpic2:hover
-{
-  opacity: 0.4;
-  cursor: pointer;
-}
-
-#portpic3
-{
-  max-width: 30%;
-  height: auto;
-  opacity: 1;
-  border: solid;
-  border-radius: 40px;
-}
-
-#portpic3:hover
-{
-  opacity: 0.4;
-  cursor: pointer;
-}
-
-#portpic4
-{
-  max-width: 30%;
-  height: auto;
-  opacity: 1;
-  border: solid;
-  border-radius: 40px;
-}
-
-#portpic4:hover
-{
-  opacity: 0.4;
-  cursor: pointer;
-}
-
-#portpic5
-{
-  max-width: 30%;
-  height: auto;
-  opacity: 1;
-  border: solid;
-  border-radius: 40px;
-}
-
-#portpic5:hover
-{
-  opacity: 0.4;
-  cursor: pointer;
-}*/
