--- a/css/style3.css
+++ b/css/style3.css
@@ -49,3 +49,104 @@
 	padding-top: 2%;
 	max-width: 27%;
 }
+
+#titleF
+{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    position: absolute;
+    font-size: 275%;
+    color: black;
+    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
+    left: 5%;
+    top: 11%;
+}
+
+#fridge1
+{
+	padding-top: 2%;
+	max-width: 30%;
+	padding-right: 5%;
+	padding-left: 16%;
+}
+
+#fridge2
+{
+	max-width: 30%;
+}
+
+#fridge3
+{
+	max-width: 40%;
+	padding-right: 6%;
+	padding-left: 7%;
+	padding-top: 3%;
+}
+
+#fridge4
+{
+	max-width: 30%;
+}
+
+#fridge5
+{
+	max-width: 25%;
+	padding-top: 2%;
+	padding-left: 25%;
+}
+
+#fridge6
+{
+	max-width: 25%;
+}
+
+#titleW
+{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    position: absolute;
+    font-size: 300%;
+    color: black;
+    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
+    left: 4%;
+    top: 10%;
+}
+
+#forces
+{	
+	max-width: 40%;
+	padding-left: 10%;
+	padding-top: 2%;
+	padding-right: 6%;
+}
+
+#winds
+{
+	max-width: 25%;
+}
+
+#winds2
+{
+	max-width: 50%;
+	padding-top: 2%;
+	padding-left: 8%;
+	padding-right: 6%;
+}
+
+#winds3
+{
+	max-width: 20%;
+	padding-top: 2%;
+}
+
+.logo
+{
+	max-width: 2%;
+	padding-right: 1%;
+	margin-top: 5%;
+}
+
+.link
+{
+	font-size: 150%;
+	font-family: Georgia, Times, "Times New Roman", serif;
+
+}
